[preview] fix error presenter collapse/show toggle flickering animation

--- a/app/styles/components/error-presenter.less
+++ b/app/styles/components/error-presenter.less
@@ -42,10 +42,6 @@
   .item {
     padding: 10px 10px 10px 25px;
 
-    &.c-w-collapsed {
-      padding: 0;
-    }
-
     h5 {
       margin-bottom: 0;
       .icon {
